packages/tree-sitter-allium/test/corpus/error_recovery.txt
==================
Unclosed Block
==================
rule unclosed {
  field: 1

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (number_literal))
      (MISSING "}"))))

==================
Missing Clause Value
==================
rule missing {
  trigger:
  ensures: true
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (clause
        keyword: (clause_keyword)
        value: (identifier))
      (clause
        keyword: (clause_keyword
          (MISSING "when"))
        value: (boolean_literal)))))

==================
Unknown Keyword
==================
rule unknown {
  bad_keyword: true
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (boolean_literal)))))
